Add Cart and Profile Componenet and provide a Protective Routing

--- a/src/components/web/categories/categories.css
+++ b/src/components/web/categories/categories.css
@@ -9,11 +9,7 @@ img{
     padding: 40px;
 }
 .swiper-slide img{
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+    height: auto;
 }
 .swiper-pagination{
     bottom: 0 !important;
